# Mono

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: SetCompilerWarnings.cmake
projects/: CMakeLists.txt
projects/emul8ors/: CMakeLists.txt  README.md
projects/emul8ors/interpreter-8085/: CMakeLists.txt  README.md  conanfile.txt
projects/emul8ors/interpreter-8085/doc/: InstructionDecodeLogic.md  ProgramSyntax.md
projects/emul8ors/interpreter-8085/inc/: Byte.h  InstructionSet.h  Memory.h  Program.h  Register.h  byte.hpp  execution_unit.hpp  instruction_set.h  instruction_set.hpp  processor.hpp  program.hpp  program_loader.hpp  register.hpp  status_register.hpp  system_memory.hpp  word.hpp
projects/emul8ors/interpreter-8085/samples/: example1.program
projects/emul8ors/interpreter-8085/scripts/: Compiler.py  bytesToText.py  instr.txt  txtToBytes.py
projects/emul8ors/interpreter-8085/src/: Byte.cpp  Register.cpp  main.cpp  try.cpp
